objects/Reassignment_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reassignment Queue</relationshipLabel>
        <relationshipName>Reassignment_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approve_Reject_Date__c</fullName>
        <label>Approve/Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reassignment_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autoapprove7thDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autoapprove7thDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoggedInUserRequestor__c</fullName>
        <formula>if($User.Id== Requestor__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLoggedInUserRequestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoggedUserApprover__c</fullName>
        <formula>if($User.Id== Approver__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLoggedUserApprover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reassignment_Queue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reassignment_Queue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Auto Approved</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reassignment Queue</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Reassignment Queue	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reassignment Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>